--- a/application1/src/main/resources/baseline/MainApp.fxml
+++ b/application1/src/main/resources/baseline/MainApp.fxml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
+<?import javafx.scene.text.*?>
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="baseline.MainApp">
    <children>
       <Pane prefHeight="200.0" prefWidth="200.0" />
+      <Pane prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <Pane layoutX="-8.0" layoutY="-7.0" prefHeight="414.0" prefWidth="616.0">
+               <children>
+                  <Text layoutX="198.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Insert number of to-do list" wrappingWidth="152.13671875" />
+                  <TextField layoutX="200.0" layoutY="182.0" />
+                  <Text layoutX="165.0" layoutY="52.0" stroke="BLACK" strokeType="INSIDE" text="To-do List Application" textAlignment="CENTER" underline="true" wrappingWidth="240.13671875">
+                     <font>
+                        <Font name="Droid Sans" size="19.0" />
+                     </font>
+                  </Text>
+               </children>
+            </Pane>
+         </children>
+      </Pane>
    </children>
 </StackPane>
